Nav-icon size fixed, accordian mouse z-index fixed, About us added, overlay added on scroll

--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -109,15 +109,15 @@ a {
   }
 
   .bar {
-    width: 70px;
-    height: 4px;
+    width: 39px;
+    height: 2px;
     background: white;
     margin: 10px 10px;
     transition: 0.9s;
   }
 
   .rotate-left {
-    transform: rotate(-45deg) translate(-9px, 10px);
+    transform: rotate(-45deg) translate(-9px, 8px);
   }
 
   .rotate-right {
